--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 </head>
 <body>
     
-    <div class="container">
-        
-    </div>
+    <main>
+        <h1>Gothenburg</h1>
+        <small class="date"></small>
+        <div class="container"></div>
+    </main>
 
     <script src="main.js"></script>
 </body>
