--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     
     <main>
-        <h1>Gothenburg</h1>
+
+            <button value="sthlm" data-longitude-value="18.063240" data-latitude-value="59.334591">Stockholm</button>
+            <button value="gbg" data-longitude-value="11.974560" data-latitude-value="57.708870">Göteborg</butt>
+            <button value="malmö" data-longitude-value="13.000530" data-latitude-value="55.604047">Malmö</button>
+  
+        <h1></h1>
         <small class="date"></small>
         <div class="container"></div>
     </main>
