added time + cleaned up a bit

--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 <body>
     
     <main>
-
+        <div class="buttons">
             <button value="sthlm" data-longitude-value="18.063240" data-latitude-value="59.334591">Stockholm</button>
             <button value="gbg" data-longitude-value="11.974560" data-latitude-value="57.708870">Göteborg</butt>
             <button value="malmö" data-longitude-value="13.000530" data-latitude-value="55.604047">Malmö</button>
+        </div>
   
-        <h1></h1>
-        <small class="date"></small>
-        <div class="container"></div>
+        <div class="info">
+            <small class="date"></small>
+            <small class="time"></small>
+        </div>
+
+        <div class="container">
+        </div>
     </main>
 
     <script src="main.js"></script>
